sorry for that i my few png picture are not showing in the github live link  and why fix it

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ main {
   margin-bottom: 80px;
 }
 .future-content {
-  background-image: url(/assets/quote-bg.png);
+  background-image: url(assets/quote-bg.png);
   background-repeat: no-repeat;
   background-position: 30px 25px;
   background-color: white;
